Testing for github

--- a/index.html
+++ b/index.html
@@ -30,12 +30,13 @@
 			<div id="header-text">
 				<h1>&spades; Sherlock Holmes <span>in</span> Google Fonts</h1>
 				<h2>Iconic quotes from the Sherlock Holmes collection set in elegant Google Font pairings.</h2>
+				<p>Testing for github.</p>
 			</div>
 		</div>
 		<div id="container-one">
 			<p class="label">Playfair Display Ultra-Bold 900 Italic, Alice Normal 400</p>
-			<h1 id="head-one">The Adventure of the Blue Carbuncle</h1>
-			<p id="body-one">My name is Sherlock Holmes. It is my business to know what other people don't know.</p>
+			<h1>The Adventure of the Blue Carbuncle</h1>
+			<p>My name is Sherlock Holmes. It is my business to know what other people don't know.</p>
 		</div>
 		<div id="container-two">
 			<p class="label">Oswald Light 300, Vollkorn Normal 400</p>
