Simplifying CSS selectors

--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
 			<div id="header-text">
 				<h1>&spades; Sherlock Holmes <span>in</span> Google Fonts</h1>
 				<h2>Iconic quotes from the Sherlock Holmes collection set in elegant Google Font pairings.</h2>
-				<p>Testing for github.</p>
 			</div>
 		</div>
 		<div id="container-one">
@@ -40,33 +39,33 @@
 		</div>
 		<div id="container-two">
 			<p class="label">Oswald Light 300, Vollkorn Normal 400</p>
-			<h1 id="head-two">The Sign of Four</h1>
-			<p id="body-two">I am the last and highest court of appeal in detection.</p>
+			<h1>The Sign of Four</h1>
+			<p>I am the last and highest court of appeal in detection.</p>
 		</div>
 		<div id="container-three">
 			<p class="label">Rufina Normal 400, Sintony Normal 400</p>
-			<h1 id="head-three">A Scandal in Bohemia</h1>
-			<p id="body-three">You see, but you do not observe. The distinction is clear.</p>
+			<h1>A Scandal in Bohemia</h1>
+			<p>You see, but you do not observe. The distinction is clear.</p>
 		</div>
 		<div id="container-four">
 			<p class="label">Medula One Normal 400, Abel Normal 400</p>
-			<h1 id="head-four">A Study in Scarlet</h1>
-			<p id="body-four">There is nothing new under the sun. It has all been done before.</p>
+			<h1>A Study in Scarlet</h1>
+			<p>There is nothing new under the sun. It has all been done before.</p>
 		</div>
 		<div id="container-five">
 			<p class="label">Megrim Normal 400, Open Sans Light 300</p>
-			<h1 id="head-five">The Adventure of the Dancing Men</h1>
-			<p id="body-five">What one man can invent another can discover.</p>
+			<h1>The Adventure of the Dancing Men</h1>
+			<p>What one man can invent another can discover.</p>
 		</div>
 		<div id="container-six">
 			<p class="label">Roboto Condensed Bold 700, Montserrat Normal 400</p>
-			<h1 id="head-six">The Man with the Twisted Lip</h1>
-			<p id="body-six">My mind is like a racing engine, tearing itself to pieces because it is not connected up with the work for which it was built.</p>
+			<h1>The Man with the Twisted Lip</h1>
+			<p>My mind is like a racing engine, tearing itself to pieces because it is not connected up with the work for which it was built.</p>
 		</div>
 		<div id="container-seven">
 			<p class="label">Montserrat Normal 400, Droid Serif Normal 400 Italic</p>
-			<h1 id="head-seven">Silver Blaze</h1>
-			<p id="body-seven">Nothing clears up a case so much as stating it to another person.</p>
+			<h1>Silver Blaze</h1>
+			<p>Nothing clears up a case so much as stating it to another person.</p>
 		</div>
 	</body>
 </html>
