--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Sherlock Holmes in Fonts</title>
 		<link rel="stylesheet" href="stylesheet.css" type="text/css">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		
 		<!-- FONTS -->
 		<link href='http://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
